--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -13,6 +13,8 @@
 }
 
 .hero__btn__group {
+  width: 100%;
+  min-height: fit-content;
   @include display(
     $display: flex,
     $direction: column,
