--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -25,8 +25,10 @@ header {
       fill: $white-color;
       fill-opacity: 1;
     }
-    position: absolute;
     @include display($display: flex);
+    position: absolute;
+    min-height: 50px;
+    max-height: auto;
     width: 100%;
     bottom: -1%;
     right: 0;
@@ -65,6 +67,7 @@ header {
           .cls-1 {
             fill: $secondary-color-2;
           }
+          min-height: fit-content;
           width: 80%;
           top: 50%;
           right: 50%;
@@ -74,6 +77,7 @@ header {
           .cls-1 {
             fill: darken($primary-color-2, 25);
           }
+          min-height: fit-content;
           width: 40%;
           top: 48%;
           left: 40%;
@@ -81,14 +85,8 @@ header {
         }
         .image__wrapper {
           position: relative;
-          width: 100%;
+          aspect-ratio: 1 / 1;
           z-index: 1;
-          img {
-            object-fit: cover;
-            object-position: center center;
-            width: 100%;
-            height: 100%;
-          }
         }
       }
     }
@@ -268,15 +266,10 @@ header {
       @include display($align-items: center, $justify-content: center);
 
       .image__wrapper {
-        position: relative;
         width: 80%;
         aspect-ratio: 1/1;
         z-index: 1;
         img {
-          object-fit: cover;
-          object-position: center center;
-          width: 100%;
-          height: 100%;
           border-radius: 100%;
         }
       }
@@ -459,15 +452,10 @@ header {
       @include display($align-items: center, $justify-content: center);
 
       .image__wrapper {
-        position: relative;
         width: 80%;
         aspect-ratio: 1/1;
         z-index: 1;
         img {
-          object-fit: cover;
-          object-position: center center;
-          width: 100%;
-          height: 100%;
           border-radius: 100%;
         }
       }
@@ -503,7 +491,12 @@ header {
 
 @media screen and (min-width: #{$breakpoint-lg}px) {
   .onlinechat .onlinechat__container {
-    @include display($direction: row, $align-items: center);
+    @include display(
+      $direction: row,
+      $align-items: center,
+      $gap: 2rem,
+      $normalize: "true"
+    );
   }
 
   .services {
@@ -516,7 +509,12 @@ header {
   }
 
   .faq .faq__container {
-    @include display($direction: row, $align-items: center);
+    @include display(
+      $direction: row,
+      $align-items: center,
+      $gap: 2rem,
+      $normalize: "true"
+    );
   }
 }
 
@@ -538,7 +536,7 @@ header {
     grid-template-columns: repeat(4, 1fr);
   }
   .onlinechat .onlinechat__container {
-    @include display($normalize: "true");
+    // @include display($normalize: "true");
   }
 
   .services .services__container {
@@ -549,7 +547,7 @@ header {
     }
   }
   .faq .faq__container {
-    @include display($normalize: "true");
+    // @include display($normalize: "true");
   }
 }
 
